Fix blockquote spacing

--- a/scss/common/_blocks.scss
+++ b/scss/common/_blocks.scss
@@ -141,7 +141,7 @@ table.tableblock,
 
 .quoteblock {
   blockquote {
-    margin: 0;
+    margin: 1em 0;
     padding: 0;
     border: none;
   }
